# kmeans

./: .gitignore  CHANGELOG.md  README.md  kmeans-clustering.cabal  package.txt
src/: KMeans.hs
src/KMeans/: Algorithm.hs  Centroid.hs  Cluster.hs  OptimizeK.hs  Point.hs  Scaling.hs  Utils.hs
src/KMeans/OptimizeK/: ElbowMethod.hs  Silhouette.hs
test/: Main.hs  README.md  out.txt
test/languages/: afrikaans.txt  azerbaijani.txt  basque.txt  bikol.txt  danish.txt  dutch.txt  english.txt  esperanto.txt  estonian.txt  faroese.txt  filipino.txt  french.txt  german.txt  haitian.txt  icelandic.txt  irish.txt  italian.txt  maori.txt  polish.txt  portuguese.txt  romanian.txt  spanish.txt  swedish.txt  turkish.txt  welsh.txt
