cabal-version:      3.0
name:               kmeans-clustering
version:            0.1.0.0
synopsis:           k-means clustering algorithm
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             davidboers
maintainer:         kwmmineccraft@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  KMeans
                      KMeans.Algorithm
                      KMeans.Centroid
                      KMeans.Cluster
                      KMeans.Point
                      KMeans.Scaling
                      KMeans.OptimizeK.ElbowMethod
                      KMeans.OptimizeK.Silhouette

    -- other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base,
                      list-extras,
                      random,
                      text,
                      text-metrics

    hs-source-dirs:   src

    default-language: Haskell2010

test-suite kmeans-clustering-test
    import:           warnings

    default-language: Haskell2010

    --other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base,
        kmeans-clustering,
        bytestring,
        utf8-string,
        filepath,
        directory,
        text
